Add files and config for sqlite

--- a/ireti-src/public/index.html
+++ b/ireti-src/public/index.html
@@ -23,6 +23,7 @@
         flex: 1;
       }
     </style>
+    <script src="http://localhost:2529/__neutralino_globals.js"></script>
   </head>
 
   <body>
